<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/header"
    android:layout_centerHorizontal="true"
    android:background="@drawable/table_normal_selector"
    android:visibility="gone"
    android:padding="12dp"
    tools:context=".FreeMode" >

    <LinearLayout
        android:id="@+id/distance_selection_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/distance_selection_1km"
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/distance_selection_1km" />

        <Button
            android:id="@+id/distance_selection_2km"
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/distance_selection_2km" />

        <Button
            android:id="@+id/distance_selection_3km"
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/distance_selection_3km" />

        <Button
            android:id="@+id/distance_selection_4km"
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="4dp"
            android:text="@string/distance_selection_4km" />

        <Button
            android:id="@+id/distance_selection_5km"
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="4dp"
            android:text="@string/distance_selection_5km" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/distance_adjust_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/distance_selection_group"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/sub_distance_btn"
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/sub" />
        
        <TextView
            android:id="@+id/adjusted_distance_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/default_distance_display"
            android:textColor="#333333" >
        </TextView>
            
        <Button
            android:id="@+id/add_distance_btn"
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:text="@string/add" />
    </LinearLayout>

</RelativeLayout>